# PROJECT2_LEIC015_G4

./: .gitignore  CMakeLists.txt  README.md
doxygen/html/: _dataset_reader_8cpp.html  _dataset_reader_8h.html  _dataset_reader_8h_source.html  _r_e_a_d_m_e_8md.html  _solver_8cpp.html  _solver_8h.html  _solver_8h_source.html  annotated.html  classes.html  dataset_8h.html  dataset_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  pallet_8h.html  pallet_8h_source.html  structdataset-members.html  structdataset.html  structpallet-members.html  structpallet.html
doxygen/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js  (+3 more)
doxygen/latex/: _dataset_reader_8cpp.tex  _dataset_reader_8h.tex  _dataset_reader_8h_source.tex  _solver_8cpp.tex  _solver_8h.tex  _solver_8h_source.tex  annotated.tex  dataset_8h.tex  dataset_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  pallet_8h.tex  pallet_8h_source.tex  refman.tex  structdataset.tex  structpallet.tex
include/: DatasetReader.h  Solver.h  dataset.h  pallet.h
src/: DatasetReader.cpp  Solver.cpp  main.cpp
